--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -26,3 +26,15 @@
     width: 100%;
     height: 100%;
 }
+
+.idBtn button{
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.idBtn button:hover{
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+}
